--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
+    "autoprefixer": "^10.4.21",
     "tailwindcss": "^4.1.8"
   },
   "dependencies": {
